--- a/_posts/fastapi/2025-04-07-FastAPI2.md
+++ b/_posts/fastapi/2025-04-07-FastAPI2.md
@@ -1,5 +1,5 @@
 ---
-title: Request and Response in FastAPI
+title: Request and Response
 description: Let's learn request and response.
 author: DS2Man
 date: 2025-04-07 11:00:00 +0000
@@ -11,9 +11,9 @@ pin: true
 
 ## *What is a Request Object?*
 
-The `Request` object in FastAPI represents the HTTP request sent by the client. It contains metadata and payload, such as:
+The `Request` object in FastAPI represents the HTTP request sent by the client. It contains metadata and payload(the actual data that the client sends to the server), such as:
 
-- HTTP method (`GET`, `POST`, etc.)
+- HTTP method (`GET`, `POST`, `PUT`, `DELTE`, `OPTIONS`, `PATCH`, etc)
 - Query parameters
 - Request headers
 - Cookies
@@ -27,22 +27,64 @@ The `Request` object in FastAPI represents the HTTP request sent by the client. 
 
 |Attribute / Method|Description|
 |---|---|
-|`request.method`|HTTP method used for the request (e.g., `GET`, `POST`)|
-|`request.url`|Full URL of the incoming request|
-|`request.base_url`|Base URL excluding the query string|
-|`request.headers`|All HTTP headers (case-insensitive dictionary)|
-|`request.query_params`|Query parameters (e.g., `/item?id=123`)|
-|`request.path_params`|Path parameters extracted from the route|
-|`request.cookies`|Cookies included in the request|
-|`request.client`|Client's IP address and port|
+|`request.method`|HTTP method used for the request <br>(e.g., `GET`, `POST`, `PUT`, `DELETE`, `OPTIONS`)|
+|`request.url`|Full URL of the incoming request<br>(e.g., `http://localhost:9248/ds2man/basic/task/?question=Hello&user_name=DS2Man`)|
+|`request.base_url`|Base URL excluding the path and query string<br>(e.g., `http://localhost:9248/`)|
+|`request.headers`|All HTTP headers (case-insensitive multi-dict)|
+|`request.query_params`|Query parameters parsed as a dictionary-like object <br>(e.g., `question=Hello&user_name=DS2Man`)|
+|`request.path_params`|Path parameters extracted from the route <br>(e.g., `/items/{item_id}` → `{"item_id": 123}`)|
+|`request.cookies`|Cookies included in the request, as a dictionary|
+|`request.client`|Client's IP address and port, e.g., <br>(e.g., Address(host='127.0.0.1', port=10519)|
+|`request.scope`|Low-level ASGI connection information (type, headers, path, etc.) <br>- used internally by Starlette|
+|`request.state`|Per-request mutable state for sharing data between middlewares and routes (e.g., `request.state.user`)|
 |`await request.body()`|Entire request body as raw bytes|
 |`await request.json()`|Parsed JSON body as a dictionary|
-|`request.app.state`|Shared application state (for accessing global app data)|
+```python
+@router.get("/request&response/case1")
+async def debug_request(request: Request):
+    visible_attrs = []
+    
+    for key in dir(request):
+        if key.startswith("_"):  # Exclude attributes starting with __ (e.g., __len__)
+            continue
+        try:
+            value = getattr(request, key)
+            # callable: Checks whether the object can be called like a function
+            if not callable(value):  # Exclude methods/functions
+                visible_attrs.append(key)
+        except Exception:
+            # Skip attributes like request.auth that may raise errors when accessed
+            continue
+
+    result = {
+        "visible_keys": visible_attrs
+    }
+
+    return result
+```
+
+```python
+url = "http://127.0.0.1:7249/ds2man/basic/request&response/case1"
+async with aiohttp.ClientSession(
+    trust_env=True, timeout=aiohttp.ClientTimeout(total=120)
+) as session:
+    async with session.get(url) as response:
+        data = await response.json()
+        print(f"\nJSON Body:")
+        print(f"type(data): {type(data)}")
+        pprint(data)
+```
+
+```bash
+JSON Body:
+type(data): <class 'dict'>
+{'visible_keys': ['base_url', 'client', 'cookies', 'headers', 'method', 'path_params', 'query_params', 'scope', 'state', 'url']}
+```
 
 #### *Example - Using GET*
 
 ```python
-@router.get("/request&response/case1")
+@router.get("/request&response/case2")
 async def get_request_info(request: Request):
     result = {
         "method": request.method,
@@ -55,7 +97,7 @@ async def get_request_info(request: Request):
 ```
 
 ```python
-url = "http://127.0.0.1:7249/ds2man/basic/request&response/case1"
+url = "http://127.0.0.1:7249/ds2man/basic/request&response/case2"
 async with aiohttp.ClientSession(
     trust_env=True, timeout=aiohttp.ClientTimeout(total=120)
 ) as session:
@@ -81,7 +123,7 @@ type(data): <class 'dict'>
 #### *Example - Using POST*
 
 ```python
-@router.post("/request&response/case2")
+@router.post("/request&response/case3")
 async def get_request_info(request: Request):
     data = await request.json()
     result = {
@@ -96,7 +138,7 @@ async def get_request_info(request: Request):
 ```
 
 ```python
-url = "http://127.0.0.1:7249/ds2man/basic/request&response/case2"
+url = "http://127.0.0.1:7249/ds2man/basic/request&response/case3"
 payload = {
     "key1": "value1", 
     "key2": "value2"
@@ -141,7 +183,7 @@ There are several types of responses:
 - `FileResponse`
 
 ```python
-@router.get("/request&response/case3")
+@router.get("/request&response/case4")
 def set_custom_header(response: Response):
     response.headers["X-Custom-Header"] = "FastAPI Rocks"
     result = {
@@ -152,7 +194,7 @@ def set_custom_header(response: Response):
 ```
 
 ```python
-url = "http://127.0.0.1:7249/ds2man/basic/request&response/case3"
+url = "http://127.0.0.1:7249/ds2man/basic/request&response/case4"
 payload = {
     "key1": "value1", 
     "key2": "value2"
@@ -175,7 +217,8 @@ Headers:
  'Content-Type': 'application/json',
  'Date': 'Tue, 06 May 2025 00:02:57 GMT',
  'Server': 'uvicorn',
- 'x-custom-header': 'FastAPI Rocks'}
+ 'x-custom-header': 'FastAPI Rocks'  # adding
+}
 
 JSON Body:
 type(data): <class 'dict'>
@@ -187,7 +230,7 @@ type(data): <class 'dict'>
 Combining both `Request` and `Response` allows for complete control over the full request-response lifecycle:
 
 ```python
-@router.post("/request&response/case4")
+@router.post("/request&response/case5")
 async def echo(request: Request, response: Response):
     data = await request.json()
     response.headers["X-Echoed"] = "True"
@@ -199,7 +242,7 @@ async def echo(request: Request, response: Response):
 ```
 
 ```python
-url = "http://127.0.0.1:7249/ds2man/basic/request&response/case4"
+url = "http://127.0.0.1:7249/ds2man/basic/request&response/case5"
 payload = {
     "key1": "value1", 
     "key2": "value2"
@@ -222,7 +265,8 @@ Headers:
  'Content-Type': 'application/json',
  'Date': 'Tue, 06 May 2025 00:08:40 GMT',
  'Server': 'uvicorn',
- 'x-echoed': 'True'}
+ 'x-echoed': 'True'  # adding
+}
 
 JSON Body:
 type(data): <class 'dict'>
