--- a/_posts/fastapi/2025-04-10-FastAPI5.md
+++ b/_posts/fastapi/2025-04-10-FastAPI5.md
@@ -1,5 +1,5 @@
 ---
-title: Custom Response in FastAPI
+title: Custom Response
 description: Let's return Custom Response
 author: DS2Man
 date: 2025-04-10 11:00:00 +0000
@@ -15,7 +15,7 @@ However, types such as HTML content, file handles, database sessions, or custom 
 
 ## *Automatic JSON Conversion*
 
-I wrote the following three sample codes. They all produce the same result depending on the type used. However, since FastAPI automatically converts the response to JSON, you don't need to explicitly use `JSONResponse`.
+I wrote the following three sample codes. They all produce the same result depending on the type used. In fact, since FastAPI automatically converts the response to JSON, you don't need to explicitly use `JSONResponse`.
 
 ```python
 import aiohttp
@@ -62,13 +62,13 @@ except Exception as e:
 ```python
 @router.get("/response/case1")
 def response_case1():
-    result = {
-        "user_name": "DS2Man",
-        "message": "Hello, World!"
-    }
+    result = {
+        "user_name": "DS2Man",
+        "message": "Hello, World!"
+    }
 
-    # return JSONResponse(content=result) # same result
-    return result    
+    # return JSONResponse(content=result) # same result
+    return result    
 ```
 
 ```bash
@@ -94,12 +94,16 @@ type(data): <class 'dict'>
 #### *Pydantic models*
 
 ```python
+class User(BaseModel):
+    id : int
+    name : str
+    
 @router.get("/response/case2")
 def response_case2():
-    result = User(id=1, name="DS2Man")  
+    result = User(id=1, name="DS2Man")
 
-    # return JSONResponse(content=result.model_dump()) # same result
-    return result
+    # return JSONResponse(content=result.model_dump()) # same result
+    return result
 ```
 
 ```bash
@@ -127,10 +131,10 @@ type(data): <class 'dict'>
 ```python
 @router.get("/response/case3")
 def response_case2():
-    result = [User(id=1, name="DS2Man"), User(id=2, name="YongCheol")]
+    result = [User(id=1, name="DS2Man"), User(id=2, name="YongCheol")]
 
-    # return JSONResponse(content=[user.model_dump() for user in result]) # same result
-    return result
+    # return JSONResponse(content=[user.model_dump() for user in result]) # same result
+    return result
 ```
 
 ```bash
@@ -169,7 +173,7 @@ def generate_html_response():
             <title>Some HTML in here</title>
         </head>
         <body>
-            <h1>Look ma! HTML!</h1>
+            <h1>Look! HTML!</h1>
         </body>
     </html>
     """
@@ -202,7 +206,7 @@ Text Body:
             <title>Some HTML in here</title>
         </head>
         <body>
-            <h1>Look ma! HTML!</h1>
+            <h1>Look! HTML!</h1>
         </body>
     </html>
 ```
@@ -212,9 +216,11 @@ Text Body:
 ```python
 @router.get("/response/case5")
 async def response_case5():
-    redirect_url = "/ds2man/basic/response/case4"
-    return RedirectResponse(redirect_url)
+    redirect_url = "/ds2man/basic/response/case4"
+    return RedirectResponse(redirect_url)
 ```
+
+As shown in the logs below, FastAPI returns a `307 Temporary Redirect` status code, and then automatically follows the redirect to complete the request with a `200 OK`.
 
 ```bash
 INFO:     127.0.0.1:7711 - "GET /ds2man/basic/response/case5 HTTP/1.1" 307 Temporary Redirect
@@ -243,7 +249,7 @@ Text Body:
             <title>Some HTML in here</title>
         </head>
         <body>
-            <h1>Look ma! HTML!</h1>
+            <h1>Look! HTML!</h1>
         </body>
     </html>
 ```
@@ -252,13 +258,13 @@ Text Body:
 
 ```python
 async def fake_video_streamer():
-    for i in range(10):
-        await sleep(0.2)
-        yield b"some fake video bytes\n"
-
+    for i in range(10):
+        await sleep(0.2)
+        yield b"some fake video bytes\n"
+        
 @router.get("/response/case6")
 async def response_case6():
-    return StreamingResponse(fake_video_streamer(), media_type="text/plain")
+    return StreamingResponse(fake_video_streamer(), media_type="text/plain")
 ```
 
 ```python
