--- a/_posts/fastapi/2025-04-11-FastAPI6.md
+++ b/_posts/fastapi/2025-04-11-FastAPI6.md
@@ -1,6 +1,6 @@
 ---
-title: HTTP Methods(GET, POST, PUT, DELETE) in FastAPI
-description: Let's learn HTTP Methods
+title: HTTP Methods(GET, POST, PUT, DELETE)
+description: Let's use HTTP Methods
 author: DS2Man
 date: 2025-04-11 11:00:00 +0000
 categories: [Backend, FastAPI]
