--- a/_posts/fastapi/2025-04-12-FastAPI7.md
+++ b/_posts/fastapi/2025-04-12-FastAPI7.md
@@ -1,5 +1,5 @@
 ---
-title: Response Model in FastAPI
+title: Response Model
 description: Let's learn Response Models for Clean and Secure APIs
 author: DS2Man
 date: 2025-04-12 11:00:00 +0000
@@ -33,14 +33,12 @@ class Item(BaseModel):
 
 @router.get("/response_model/case1", response_model=Item)
 async def read_items():
-    return {"name": "Portal Gun", "price": 42.0, "password": "1234"}
+    return {"name": "Portal Gun", "price": 42.0, "password": "1234"}
 ```
 
 ```python
 try:
     url = "http://127.0.0.1:7249/ds2man/basic/response_model/case1"
-    data = {
-    }
 
     async with aiohttp.ClientSession(
         trust_env=True, timeout=aiohttp.ClientTimeout(total=120)
@@ -101,8 +99,6 @@ async def read_items():
 ```python
 try:
     url = "http://127.0.0.1:7249/ds2man/basic/response_model/case2"
-    data = {
-    }
 
     async with aiohttp.ClientSession(
         trust_env=True, timeout=aiohttp.ClientTimeout(total=120)
@@ -159,7 +155,7 @@ class Item(BaseModel):
 
 @router.post("/response_model/case3", response_model=Item)
 async def create_item(item: Item):
-    return item
+    return item
 ```
 
 ```python
