--- a/_posts/fastapi/2025-04-08-FastAPI3.md
+++ b/_posts/fastapi/2025-04-08-FastAPI3.md
@@ -1,5 +1,5 @@
 ---
-title: Routers in FastAPI
+title: Routers
 description: Let's learn how to organize a scalable FastAPI using APIRouter.
 author: DS2Man
 date: 2025-04-08 11:00:00 +0000
