--- a/_posts/fastapi/2025-04-17-FastAPI12.md
+++ b/_posts/fastapi/2025-04-17-FastAPI12.md
@@ -1,5 +1,5 @@
 ---
-title: Understanding the Lifespan of a FastAPI
+title: Lifespan of a FastAPI
 description: Let's learn the Lifespan
 author: DS2Man
 date: 2025-04-17 11:00:00 +0000
@@ -87,12 +87,6 @@ Key Points:
 ```python
 import asyncio
 from contextlib import asynccontextmanager
-
-logging.basicConfig(
-    level=logging.INFO,
-    format="[%(levelname)s] %(asctime)s %(message)s",
-    handlers=[logging.StreamHandler()]
-) 
 
 async def periodic_task():
     while True:
