--- a/_posts/grammer/python/2024-12-04-Python4.md
+++ b/_posts/grammer/python/2024-12-04-Python4.md
@@ -32,12 +32,12 @@ In this post, we’ll clearly explain the differences between a Python dictionar
 
 ```python
 data = {'name': 'DS2Man', 'age': 30}
-print(type(data))  # <class 'dict'>
+print(type(data)) # <class 'dict'>
 print(data) # {'name': 'DS2Man', 'age': 30} # Note. single or double quotation
 
 import json
 dict2json = json.dumps(data)
-print(type(dict2json))  # <class 'str'>
+print(type(dict2json)) # <class 'str'>
 print(dict2json) # {"name": "DS2Man", "age": 30} # Note. must double quotation
 ```
 
@@ -74,5 +74,6 @@ You can use the `ensure_ascii` option to convert Unicode characters into ASCII r
 import json
 
 json2dict = json.loads(dict2json)
+print(type(json2dict))  # <class 'dict'>
 print(json2dict)  # {'name': 'Alice', 'age': 30}
 ```
