--- a/_posts/fastapi/2025-04-07-FastAPI2.md
+++ b/_posts/fastapi/2025-04-07-FastAPI2.md
@@ -23,9 +23,9 @@ The `Request` object in FastAPI represents the HTTP request sent by the client. 
 - App context (shared state)
 
 
-#### *Key Attributes and Methods of `Request`*
+#### *Key Attributes of Request*
 
-|Attribute / Method|Description|
+|Attribute|Description|
 |---|---|
 |`request.method`|HTTP method used for the request <br>(e.g., `GET`, `POST`, `PUT`, `DELETE`, `OPTIONS`)|
 |`request.url`|Full URL of the incoming request<br>(e.g., `http://localhost:9248/ds2man/basic/task/?question=Hello&user_name=DS2Man`)|
@@ -39,6 +39,7 @@ The `Request` object in FastAPI represents the HTTP request sent by the client. 
 |`request.state`|Per-request mutable state for sharing data between middlewares and routes (e.g., `request.state.user`)|
 |`await request.body()`|Entire request body as raw bytes|
 |`await request.json()`|Parsed JSON body as a dictionary|
+
 ```python
 @router.get("/request&response/case1")
 async def debug_request(request: Request):
