--- a/_posts/grammer/linux/2024-12-04-Linux1.md
+++ b/_posts/grammer/linux/2024-12-04-Linux1.md
@@ -3,7 +3,7 @@ title: ShellScripts
 description: Let's study ShellScripts.
 author: DS2Man
 date: 2024-12-04 11:00:00 +0000
-categories: [Grammer, ShellScript]
+categories: [Grammer, Linux]
 tags:
   - ShellScript
   - Grammer
