--- a/_posts/grammer/python/2024-12-06-Python7(ing).md
+++ b/_posts/grammer/python/2024-12-06-Python7(ing).md
@@ -1,5 +1,5 @@
 ---
-title: `%load_ext autoreload` and `%autoreload 2`
+title: PyInstaller
 description: Let's check the results immediately without restarting the kernel. 
 author: DS2Man
 date: 2124-12-05 11:00:00 +0000
