--- a/_posts/grammer/python/2024-12-05-Python5.md
+++ b/_posts/grammer/python/2024-12-05-Python5.md
@@ -1,5 +1,5 @@
 ---
-title: `%load_ext autoreload` and `%autoreload 2`
+title: \%load_ext autoreload and \%autoreload 2
 description: Let's check the results immediately without restarting the kernel. 
 author: DS2Man
 date: 2024-12-05 11:00:00 +0000
